--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,10 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Shinigami Eyes",
-    "author": "Shinigami Eyes",
-    "version": "1.0.37",
-    "homepage_url": "https://shinigami-eyes.github.io/",
-    "description": "Highlights transphobic/anti-LGBT and trans-friendly subreddits/users/facebook pages/groups with different colors.",
+    "name": "Jeffrey Associates",
+    "author": "jeffrey-associates",
+    "version": "1.0.0",
+    "description": "Highlights individuals named in the Epstein files on social networks.",
     "icons": {
         "48": "icons/icon-48.png",
         "128": "icons/icon-128-96.png"
@@ -139,7 +138,7 @@
     ],
     "applications": {
         "gecko": {
-            "id": "shinigamieyes@shinigamieyes",
+            "id": "jeffrey-associates@jeffrey-associates",
             "strict_min_version": "60.0"
         }
     }
